--- a/test.ipynb
+++ b/test.ipynb
@@ -133,6 +133,152 @@
     "model.update({'eps':0.1, 'num_boost_round': 10})\n",
     "model.fit(X, y)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.51\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "# Prepare Data\n",
+    "from dro.src.data.dataloader_regression import regression_basic\n",
+    "from dro.src.data.dataloader_classification import classification_basic\n",
+    "from dro.src.data.draw_utils import draw_classification\n",
+    "\n",
+    "\n",
+    "from dro.src.linear_model.or_wasserstein_dro import *\n",
+    "from dro.src.linear_model.chi2_dro import *\n",
+    "\n",
+    "from dro.src.linear_model.marginal_dro import *\n",
+    "from dro.src.linear_model.sinkhorn_dro import SinkhornLinearDRO\n",
+    "\n",
+    "from sklearn.datasets import make_classification, make_regression\n",
+    "\n",
+    "\n",
+    "\n",
+    "X, y = make_classification(n_samples=100, n_features=5)\n",
+    "y = (y > 0).astype(float)\n",
+    "model = SinkhornLinearDRO(input_dim=5, model_type='svm')\n",
+    "\n",
+    "# Mock perfect predictions\n",
+    "mock_pred = y.copy()\n",
+    "model.predict = lambda x: mock_pred\n",
+    "acc, __ = model.score(X, y)\n",
+    "print(acc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 1, 1, 0, 0, 1, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1, 1, 1, 1, 0,\n",
+       "       1, 0, 1, 0, 0, 0, 1, 1, 0, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0,\n",
+       "       0, 0, 1, 0, 1, 1, 1, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0,\n",
+       "       0, 1, 1, 0, 1, 1, 1, 0, 0, 1, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 1,\n",
+       "       1, 0, 0, 1, 1, 0, 1, 0, 1, 1, 1, 1])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X, y = make_classification(n_samples=100, n_features=5)\n",
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.average(model.predict(X) == y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.]\n",
+      " [1.]\n",
+      " [0.]\n",
+      " [1.]\n",
+      " [0.]\n",
+      " [0.]\n",
+      " [1.]\n",
+      " [0.]\n",
+      " [1.]\n",
+      " [1.]] [1. 1. 0. 1. 0. 0. 1. 0. 1. 1.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "predictions = model.predict(X)\n",
+    "accuracy = np.average(predictions == y)\n",
+    "print(predictions[0:10], y[0:10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "         True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "         True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "         True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "         True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "         True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "         True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "         True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "         True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "         True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "         True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "         True]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictions.reshape(1, -1) == y"
+   ]
   }
  ],
  "metadata": {
