--- a/test.ipynb
+++ b/test.ipynb
@@ -251,33 +251,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[ True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "         True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "         True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "         True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "         True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "         True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "         True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "         True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "         True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "         True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "         True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "         True]])"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mCanceled future for execute_request message before replies were done"
+     ]
     }
    ],
    "source": [
-    "predictions.reshape(1, -1) == y"
+    "import numpy as np\n",
+    "from sklearn.datasets import make_classification\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from dro.src.tree_model.lgbm import KLDRO_LGBM  \n",
+    "\n",
+    "X, y = make_classification(\n",
+    "    n_samples=1000,\n",
+    "    n_features=5,\n",
+    "    n_informative=3,\n",
+    "    n_redundant=1,\n",
+    "    n_classes=2,\n",
+    "    random_state=42\n",
+    ")\n",
+    "\n",
+    "model = KLDRO_LGBM(eps=0.1)\n",
+    "\n",
+    "init_config = {\"max_depth\": 1, \"num_boost_round\": 2}\n",
+    "model.update(init_config)\n",
+    "# model.fit(X, y)\n",
+    "\n",
+    "import lightgbm\n",
+    "dtrain = lightgbm.Dataset(X, y)\n",
+    "num_boost_round = init_config[\"num_boost_round\"]\n",
+    "del init_config[\"num_boost_round\"]\n",
+    "\n",
+    "print('check')\n",
+    "model = lightgbm.train(init_config, dtrain, num_boost_round=num_boost_round, feval =lambda preds, dtrain: model._kl_dro_loss(preds, dtrain, 0.1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mCanceled future for execute_request message before replies were done"
+     ]
+    }
+   ],
+   "source": [
+    "import lightgbm\n",
+    "dtrain = lightgbm.Dataset(X, y)\n",
+    "num_boost_round = init_config[\"num_boost_round\"]\n",
+    "del init_config[\"num_boost_round\"]\n",
+    "\n",
+    "print('check')\n",
+    "model = lightgbm.train(init_config, dtrain, num_boost_round=num_boost_round, fobj=lambda preds, dtrain: model._kl_dro_loss(preds, dtrain, 0.1))\n"
    ]
   }
  ],
