--- a/test.ipynb
+++ b/test.ipynb
@@ -307,6 +307,36 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "(1.0, 1.0)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.datasets import make_classification, make_regression\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from dro.src.tree_model.lgbm import KLDRO_LGBM  \n",
+    "from dro.src.tree_model.xgb import Chi2DRO_XGB  \n",
+    "\n",
+    "X, y = make_classification(n_samples=100, random_state=42)\n",
+    "model = Chi2DRO_XGB(kind='classification', eps=0.1)\n",
+    "model.update({\"num_boost_round\": 10, \"learning_rate\": 0.1})\n",
+    "model.fit(X, y)\n",
+    "model.score(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
      "ename": "",
      "evalue": "",
      "output_type": "error",
