--- a/test.ipynb
+++ b/test.ipynb
@@ -303,13 +303,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.datasets import make_classification, make_regression\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from dro.src.tree_model.lgbm import KLDRO_LGBM  \n",
+    "from dro.src.tree_model.xgb import Chi2DRO_XGB  \n",
+    "from dro.src.linear_model import WassersteinDROsatisficing\n",
+    "\n",
+    "model_type = 'lad'\n",
+    "\n",
+    "if model_type in {\"lad\", \"ols\"}:\n",
+    "    X, y = make_regression(n_samples=50, n_features=10)\n",
+    "else:\n",
+    "    X, y = make_classification(n_samples=50, n_features=10)\n",
+    "    y = np.sign(y-0.5)\n",
+    "\n",
+    "model = WassersteinDROsatisficing(\n",
+    "    input_dim=10,\n",
+    "    model_type=model_type,\n",
+    "    solver='MOSEK'\n",
+    ")\n",
+    "model.update({\n",
+    "    'kappa': 0.5,\n",
+    "    'target_ratio': 1.5\n",
+    "})\n",
+    "\n",
+    "params = model.fit(X, y)\n",
+    "assert 'theta' in params  # Verify solution exists\n",
+    "model.update_kernel({'metric': 'rbf', 'kernel_gamma': 1})\n",
+    "params = model.fit(X, y)\n",
+    "model.update_kernel({'metric': 'rbf', 'kernel_gamma': 'scale', 'n_components': 5})\n",
+    "params = model.fit(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1.0, 1.0)"
+       "'rbf'"
       ]
      },
      "execution_count": 2,
@@ -318,17 +357,7 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "from sklearn.datasets import make_classification, make_regression\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from dro.src.tree_model.lgbm import KLDRO_LGBM  \n",
-    "from dro.src.tree_model.xgb import Chi2DRO_XGB  \n",
-    "\n",
-    "X, y = make_classification(n_samples=100, random_state=42)\n",
-    "model = Chi2DRO_XGB(kind='classification', eps=0.1)\n",
-    "model.update({\"num_boost_round\": 10, \"learning_rate\": 0.1})\n",
-    "model.fit(X, y)\n",
-    "model.score(X, y)"
+    "model.kernel"
    ]
   },
   {
