--- a/docs-code/api/notebooks/tree_dro_tutorial.ipynb
+++ b/docs-code/api/notebooks/tree_dro_tutorial.ipynb
@@ -158,7 +158,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "llm-ot",
+   "display_name": "Python 3.13.2 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -172,7 +172,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.0"
+   "version": "3.13.2"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
+   }
   }
  },
  "nbformat": 4,
